# isaac_ros_pose_estimation

./: README.md
isaac_ros_centerpose/: CMakeLists.txt  package.xml
isaac_ros_centerpose/include/isaac_ros_centerpose/: centerpose_decoder_node.hpp  centerpose_detection.hpp  centerpose_types.hpp  centerpose_visualizer_node.hpp  cuboid3d.hpp  cuboid_pnp_solver.hpp  soft_nms_nvidia.hpp
isaac_ros_centerpose/launch/: isaac_ros_centerpose_core.launch.py  isaac_ros_centerpose_tensor_rt.launch.py  isaac_ros_centerpose_triton.launch.py
isaac_ros_centerpose/src/: centerpose_decoder_node.cpp  centerpose_visualizer_node.cpp  cuboid3d.cpp  cuboid_pnp_solver.cpp  soft_nms_nvidia.cpp
isaac_ros_centerpose/test/: test_centerpose_decoder_fixture.py  test_centerpose_pol.py  test_centerpose_pol_triton.py
isaac_ros_centerpose/test/models/centerpose_shoe/: config.pbtxt
isaac_ros_centerpose/test/test_cases/shoe/: ground_truth.json  tensor_data.json
isaac_ros_dope/: CMakeLists.txt  package.xml
isaac_ros_dope/include/isaac_ros_dope/: dope_decoder_node.hpp
isaac_ros_dope/launch/: isaac_ros_dope_core.launch.py  isaac_ros_dope_tensor_rt.launch.py  isaac_ros_dope_triton.launch.py
isaac_ros_dope/src/: dope_decoder_node.cpp
isaac_ros_dope/test/: isaac_ros_dope_pol.py
isaac_ros_foundationpose/: CMakeLists.txt  package.xml
isaac_ros_foundationpose/config/: foundationpose_model_config.yaml
isaac_ros_foundationpose/include/isaac_ros_foundationpose/: foundationpose_node.hpp  foundationpose_tracking_node.hpp
isaac_ros_foundationpose/include/isaac_ros_foundationpose/foundationpose_impl/: mesh_loader.hpp  pose_decoder.hpp  pose_renderer.hpp  pose_sampler.hpp  pose_transformer.hpp
isaac_ros_foundationpose/launch/: isaac_ros_foundationpose.launch.py  isaac_ros_foundationpose_core.launch.py  isaac_ros_foundationpose_isaac_sim.launch.py  isaac_ros_foundationpose_isaac_sim_tracking.launch.py  isaac_ros_foundationpose_tracking_core.launch.py
isaac_ros_foundationpose/src/: foundationpose_node.cpp  foundationpose_selector_node.cpp  foundationpose_tracking_node.cpp
isaac_ros_foundationpose/src/foundationpose_impl/: foundationpose_render.cu  foundationpose_render.cu.hpp  foundationpose_sampling.cu  foundationpose_sampling.cu.hpp  mesh_loader.cpp  pose_decoder.cpp  pose_renderer.cpp  pose_sampler.cpp  pose_transformer.cpp
isaac_ros_foundationpose/srv/: SwitchMesh.srv
isaac_ros_foundationpose/test/: generate_engines.py  isaac_ros_foundationpose_bbox_pol.py  isaac_ros_foundationpose_fixed_axis_angles_pol.py  isaac_ros_foundationpose_iterative_refine_pol.py  isaac_ros_foundationpose_pol.py  isaac_ros_foundationpose_symmetry_axes_pol.py  isaac_ros_foundationpose_tracking_pol.py
isaac_ros_foundationpose_models_install/: package.xml
isaac_ros_foundationpose_models_install/asset_scripts/: install_foundationpose_models.sh
isaac_ros_gxf_extensions/gxf_isaac_centerpose/: package.xml
isaac_ros_gxf_extensions/gxf_isaac_dope/: package.xml
isaac_ros_gxf_extensions/gxf_isaac_foundationpose/: package.xml
isaac_ros_pose_proc/: package.xml
isaac_ros_pose_proc/test/: isaac_ros_outlier_filter_test.py
